css/main.css
body, html {
  height: 100%;
  overflow: hidden;
}

.section:not(#footer-bar) {
  position: relative;
  height: 94vh;
  overflow: auto;
}

div a,
div a:hover,
span {
  color: #339FF0;
  text-decoration: none;
}

/* Font Awesome */
.fab,
.far,
.fas {
  padding: 5px;
  font-size: 20px;
  text-align: center;
  color: #222;
  vertical-align: middle;
}

img {
  width: 100%;
}

#footer-bar {
  text-align: center;
}

/* Buttons */
.floating-button {
  width: 20px;
  height: 20px;
  text-decoration: none;
  z-index: 1;
}

#dark-button {
  position: absolute;
  top: 20px;
  right: 20px;
}

#play-button {
  position: absolute;
  top: 20px;
  left: 20px;
}

/* Help Overlay */
#overlay {
  position: fixed;
  display: none;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.5);
  color: white;
  z-index: 2;
  pointer-events: none;
}

#help-button {
  z-index: 5;
}

#keys-div {
  display: absolute;
  bottom: 5%;
  margin-bottom: 0;
}

.help-text {
  margin-bottom: 1%;
  z-index: 3;
}

/* Dark Mode */
body.dark {
  color: #dcd9d4;
  background-color: #181a1b;
}

body.dark .far, body.dark .fas, body.dark .fab {
  color: #dcd9d4;
}

body.dark hr {
  border-top-color: #393939;
}

